工友中I18N显示

--- a/config/locales/active_record.yml
+++ b/config/locales/active_record.yml
@@ -3,7 +3,17 @@ zh-CN:
     models:
       contact: "联系人"
       company: "代招企业"
+      labor: "工友"
     attributes:
+      common: &common
+        name: 姓名
+        mobile: 手机
+        idcard: 身份证
+        gender: 性别
+        birthday: 出生年月
+        province: 省份
+        city: 城市
+        district: 区/县
       contact:
         name: "姓名"
         gender: "性别"
@@ -12,3 +22,17 @@ zh-CN:
         name: "公司名称"
         address: "详细地址"
         introduction: "详细介绍"
+      labor:
+        <<: *common
+        age: 性别/年龄
+        channel: 来源
+        state:
+          yidengji: 已登记
+          yibaoming: 已报名
+          yimianshi: 已面试
+          yiruzhi: 已入职
+          yilizhi: 已离职
+          weiruzhi: 未入职
+      labor/intention:
+        salary: 期望薪资
+        position_ids: 期望岗位
