--- a/config/locales/active_record.yml
+++ b/config/locales/active_record.yml
@@ -3,6 +3,7 @@ zh-CN:
     models:
       contact: "联系人"
       company: "代招企业"
+      job: "招聘信息"
     attributes:
       contact:
         name: "姓名"
@@ -12,3 +13,15 @@ zh-CN:
         name: "公司名称"
         address: "详细地址"
         introduction: "详细介绍"
+      job:
+        name: "岗位标题"
+        position: "职位类型"
+        gender: "性别要求"
+        age_min: "最小年龄"
+        age_max: "最大年龄"
+        salary_min: "最低工资"
+        salary_max: "最高工资"
+        salary_basic: "基本工资"
+        company_id: "企业信息"
+        contact_id: "联系人信息"
+        state: "状态"
